@@ -76,7 +76,7 @@
 #undef CONF_SETGROUPS
 #undef CONF_ALLOWFILE
 #undef CONF_DENYFILE
-#undef CONF_CHECKHOSTS
+#undef CONF_CHECKHOST
 #undef CONF_AFS_SETPAG
 #undef CONF_CGIDIR
 
