@@ -58,6 +58,9 @@ run it if needed for AFS support.
 	<LI>Cleaned up Makefile, finished support for building in a 
 separate directory from the source, added a 'dep' target using depend.awk
 from mutt distribution.
+	<LI>Fixed problem with CHECKHOST/CHECKHOSTS typos.
+	<LI>Added support for using "*" with checkhost support to restrict
+ALL userids from being accessed from that host. (*@x.x.x.x/y.y.y.y)
 </UL>
 
 <P><H3>New in version 3.5:</H3><UL>
